Fix overlay bug on mobile search

--- a/resources/assets/main/css/app.css
+++ b/resources/assets/main/css/app.css
@@ -6228,7 +6228,8 @@ article.product {
   padding: 10px;
   display: none;
   background: #c1c1c1;
-  margin-top: 55px; }
+  margin-top: 55px;
+  z-index: 10; }
 
 #mobile-side-filters div {
   margin-top: 20px; }
